FIX: overflow-x

--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,6 @@ body {
   color: hsl(var(--clr-light));
   line-height: 1.5;
   min-height: 100vh;
-  overflow-x: hidden;
 }
 
 body::after {
@@ -119,6 +118,10 @@ body::after {
   right: 0;
   position: fixed;
   z-index: -1;
+}
+
+#root {
+  overflow-x: hidden;
 }
 
 /* make images easier to work with */
